# fastapi_file_storage_server

./: .gitignore  main.py  pyproject.toml
db/: db_conf.py  sqlite_repo.py
interfaces/: __init__.py  download_service.py  upload_service.py
interfaces/db/: repository.py
interfaces/services/: download_service.py  upload_service.py
routers/: __init__.py  health_check.py  storage.py
schemas/: file_storage.py
services/: __init__.py  download_service.py  upload_service.py
