[tool.poetry]
name = "kursach-server"
version = "0.1.0"
description = ""
authors = ["denis.kosarevskij <denis.kosarevskij@tetrika.school>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
